<resources>
    <string name="app_name">Hossein</string>
    <string name="add_account">Add Account</string>
    <string name="customer">Customer</string>
    <string name="account_number">Account Number</string>
    <string name="balance">Balance</string>
    <string name="phone">Phone</string>
    <string name="open_date">Open Date</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="update">Update</string>
    <string name="remove">Remove</string>
    <string name="find">Find</string>
    <string name="add">Add</string>
    <string name="clear">Clear</string>
    <string name="show_all">Show All</string>
    <string name="list_of_all_customers_sorted_by_family">List of All Customers Sorted By Family</string>
    <string name="back">Back</string>
    <string name="_0_0">0.0</string>
    <string name="enter_the_amount">Enter the amount</string>
    <string name="withdraw">Withdraw</string>
</resources>